--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -58,7 +58,7 @@ tempfile = "3.0"
 serial_test = "2.0"
 
 # 性能基准测试依赖
-criterion = { version = "0.5", features = ["html_reports"] }
+criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
 futures = "0.3"
 
 [features]
