--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -39,8 +39,9 @@ handlebars = "5.0"
 thiserror = "1.0"
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
-chrono = { version = "0.4", features = ["serde"] }
+chrono = { version = "0.4", features = ["serde", "clock"] }
 tempfile = "3.0"
+anyhow = "1.0"
 
 # API框架依赖
 axum = "0.7"
@@ -50,6 +51,9 @@ tower-http = { version = "0.5", features = ["cors", "trace"] }
 uuid = { version = "1.0", features = ["v4", "serde"] }
 validator = { version = "0.16", features = ["derive"] }
 clap = { version = "4.0", features = ["derive"] }
+rand = "0.8"
+sha2 = "0.10"
+base64 = "0.21"
 
 [dev-dependencies]
 reqwest = { version = "0.11", features = ["json"] }
