--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -65,6 +65,12 @@ serial_test = "2.0"
 criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
 futures = "0.3"
 
+# 跨平台测试依赖
+dirs = "5.0"
+toml = "0.8"
+base64 = "0.21"
+chrono = { version = "0.4", features = ["serde", "clock"] }
+
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem
 # DO NOT REMOVE!!
