--- a/.github/workflows/quality-check.yml
+++ b/.github/workflows/quality-check.yml
@@ -1,25 +1,19 @@
 name: 代码质量检查
 
-# 触发条件
 on:
   push:
-    branches: [ master, main, develop ]
+    branches: [ main, develop ]
   pull_request:
-    branches: [ master, main, develop ]
-
-env:
-  RUST_BACKTRACE: 1
-  CARGO_TERM_COLOR: always
+    branches: [ main ]
 
 jobs:
-  # 代码质量检查
-  quality-check:
-    name: 代码质量检查
+  # Rust 代码质量检查
+  rust-quality:
+    name: Rust 代码质量
     runs-on: ubuntu-latest
 
     steps:
-    - name: 检出代码
-      uses: actions/checkout@v4
+    - uses: actions/checkout@v4
 
     - name: 安装 Rust
       uses: dtolnay/rust-toolchain@stable
@@ -27,7 +21,7 @@ jobs:
         components: rustfmt, clippy
 
     - name: 缓存 Cargo 依赖
-      uses: actions/cache@v3
+      uses: actions/cache@v4
       with:
         path: |
           ~/.cargo/registry
@@ -37,105 +31,88 @@ jobs:
         restore-keys: |
           ${{ runner.os }}-cargo-
 
-    - name: 安装 cargo-audit
-      run: cargo install cargo-audit
+    - name: 检查 Cargo.toml 格式
+      run: cargo check --message-format=short
 
-    - name: 检查代码格式
+    - name: 代码格式检查
       run: cargo fmt --all -- --check
 
-    - name: 运行 Clippy
+    - name: Clippy 静态分析
       run: cargo clippy --all-targets --all-features -- -D warnings
 
-    - name: 检查编译
-      run: cargo check --all-targets --all-features
-
-    - name: 运行测试
-      run: cargo test --lib --bins
-
-    - name: 检查文档
-      run: cargo doc --no-deps --document-private-items
-
-    - name: 安全审计
-      run: cargo audit
-
-  # 构建测试
-  build-test:
-    name: 构建测试
-    strategy:
-      matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
-    runs-on: ${{ matrix.os }}
-
-    steps:
-    - name: 检出代码
-      uses: actions/checkout@v4
-
-    - name: 安装 Rust
-      uses: dtolnay/rust-toolchain@stable
-
-    - name: 缓存 Cargo 依赖
-      uses: actions/cache@v3
-      with:
-        path: |
-          ~/.cargo/registry
-          ~/.cargo/git
-          target
-        key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
-        restore-keys: |
-          ${{ runner.os }}-cargo-
-
-    - name: 安装系统依赖 (Ubuntu)
-      if: matrix.os == 'ubuntu-latest'
-      run: |
-        sudo apt-get update
-        sudo apt-get install -y libwebkit2gtk-4.0-dev \
-          build-essential \
-          curl \
-          wget \
-          libssl-dev \
-          libgtk-3-dev \
-          libayatana-appindicator3-dev \
-          librsvg2-dev
-
-    - name: 构建项目
-      run: cargo build --verbose --release
+    - name: 运行单元测试
+      run: cargo test --lib --all-features
 
     - name: 运行集成测试
-      run: cargo test --release
+      run: cargo test --test '*' --all-features
 
-  # 覆盖率报告
-  coverage:
-    name: 测试覆盖率
+  # 文档检查
+  docs:
+    name: 文档检查
     runs-on: ubuntu-latest
 
     steps:
-    - name: 检出代码
-      uses: actions/checkout@v4
+    - uses: actions/checkout@v4
 
-    - name: 安装 Rust
-      uses: dtolnay/rust-toolchain@stable
+    - name: 检查用户文档
+      run: |
+        # 检查用户手册是否存在且完整
+        if [ -f "docs/user-manual.md" ]; then
+          echo "✅ 用户手册存在"
+        else
+          echo "❌ 用户手册缺失"
+          exit 1
+        fi
+
+        # 检查安装指南
+        if [ -f "docs/installation-guide.md" ]; then
+          echo "✅ 安装指南存在"
+        else
+          echo "❌ 安装指南缺失"
+          exit 1
+        fi
+
+        # 检查故障排除指南
+        if [ -f "docs/troubleshooting.md" ]; then
+          echo "✅ 故障排除指南存在"
+        else
+          echo "❌ 故障排除指南缺失"
+          exit 1
+        fi
+
+  # 最终质量报告
+  quality-report:
+    name: 质量报告
+    needs: [rust-quality, docs]
+    if: always()
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: 生成质量报告
+      run: |
+        echo "# AI Manager 代码质量报告" > quality-report.md
+        echo "" >> quality-report.md
+        echo "## 构建信息" >> quality-report.md
+        echo "- **提交**: ${{ github.sha }}" >> quality-report.md
+        echo "- **分支**: ${{ github.ref_name }}" >> quality-report.md
+        echo "- **时间**: $(date -u '+%Y-%m-%d %H:%M:%S UTC')" >> quality-report.md
+        echo "" >> quality-report.md
+
+        echo "## 质量检查结果" >> quality-report.md
+        echo "- Rust 代码质量: ${{ needs.rust-quality.result }}" >> quality-report.md
+        echo "- 文档检查: ${{ needs.docs.result }}" >> quality-report.md
+
+        # 添加检查状态图标
+        echo "" >> quality-report.md
+        echo "## 详细状态" >> quality-report.md
+        [ "${{ needs.rust-quality.result }}" = "success" ] && echo "✅ Rust 代码质量检查通过" || echo "❌ Rust 代码质量检查失败" >> quality-report.md
+        [ "${{ needs.docs.result }}" = "success" ] && echo "✅ 文档检查通过" || echo "❌ 文档检查失败" >> quality-report.md
+
+        cat quality-report.md
+
+    - name: 上传质量报告
+      uses: actions/upload-artifact@v4
       with:
-        components: llvm-tools-preview
-
-    - name: 缓存 Cargo 依赖
-      uses: actions/cache@v3
-      with:
-        path: |
-          ~/.cargo/registry
-          ~/.cargo/git
-          target
-        key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
-        restore-keys: |
-          ${{ runner.os }}-cargo-
-
-    - name: 安装 cargo-llvm-cov
-      run: cargo install cargo-llvm-cov
-
-    - name: 生成覆盖率报告
-      run: cargo llvm-cov --all-features --workspace --lcov --output-path lcov.info
-
-    - name: 上传覆盖率到 Codecov
-      uses: codecov/codecov-action@v3
-      with:
-        files: lcov.info
-        fail_ci_if_error: true
+        name: quality-report
+        path: quality-report.md
+        retention-days: 30
