--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -201,9 +201,9 @@ jobs:
 
         ## 📚 文档
 
-        - [用户手册](https://docs.ai-manager.com/user-manual)
-        - [安装指南](https://docs.ai-manager.com/installation-guide)
-        - [故障排除](https://docs.ai-manager.com/troubleshooting)
+        - [用户手册](https://docs.xxx.com/user-manual)
+        - [安装指南](https://docs.xxx.com/installation-guide)
+        - [故障排除](https://docs.xxx.com/troubleshooting)
 
         ## 🔐 安全
 
