--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,11 +1,13 @@
 name: 构建和发布 AI Manager
 
-on:
-  push:
-    branches: [ main ]
-    tags: [ 'v*' ]
-  pull_request:
-    branches: [ main ]
+# on:
+#   push:
+#     branches: [ main ]
+#     tags: [ 'v*' ]
+#   pull_request:
+#     branches: [ main ]
+# 只允许手动触发
+on: workflow_dispatch
 
 env:
   CARGO_TERM_COLOR: always
@@ -98,14 +100,7 @@ jobs:
 
     - name: Clippy 检查
       working-directory: src-tauri
-      env:
-        JAVASCRIPTCORE_R_SYS_NO_PKG_CONFIG: 1
-        PKG_CONFIG_ALLOW_CROSS: 1
       run: |
-        # 设置环境变量绕过 javascriptcore-rs-sys 问题
-        export JAVASCRIPTCORE_R_SYS_NO_PKG_CONFIG=1
-        export PKG_CONFIG_ALLOW_CROSS=1
-
         # 只检查关键的 clippy 警告，忽略代码风格问题
         echo "进行核心代码质量检查..."
 
