--- a/.github/workflows/quality-check.yml
+++ b/.github/workflows/quality-check.yml
@@ -49,7 +49,6 @@ jobs:
           libxml2-dev \
           libcairo2-dev \
           libgdk-pixbuf2.0-dev \
-          libjavascriptcoregtk-4.0-dev \
           libicu-dev \
           libharfbuzz-dev \
           libfontconfig1-dev \
@@ -77,26 +76,9 @@ jobs:
         sudo ln -sf /usr/lib/x86_64-linux-gnu/libjavascriptcoregtk-4.1.so.0 /usr/lib/x86_64-linux-gnu/libjavascriptcoregtk-4.0.so.0
         sudo ln -sf /usr/lib/x86_64-linux-gnu/libjavascriptcoregtk-4.1.so /usr/lib/x86_64-linux-gnu/libjavascriptcoregtk-4.0.so
 
-        # 检查是否存在 JavaScriptCore 相关库并创建额外链接
-        if [ -f "/usr/lib/x86_64-linux-gnu/libJavaScriptCore.so.4" ]; then
-          sudo ln -sf /usr/lib/x86_64-linux-gnu/libJavaScriptCore.so.4 /usr/lib/x86_64-linux-gnu/libJavaScriptCore.so
-        fi
-
-        # 尝试创建 pkg-config 兼容性文件
-        sudo mkdir -p /usr/local/lib/pkgconfig
-        if [ -f "/usr/lib/x86_64-linux-gnu/pkgconfig/javascriptcoregtk-4.1.pc" ]; then
-          sudo cp /usr/lib/x86_64-linux-gnu/pkgconfig/javascriptcoregtk-4.1.pc /usr/local/lib/pkgconfig/javascriptcoregtk-4.0.pc
-          sudo sed -i 's/4\.1/4.0/g' /usr/local/lib/pkgconfig/javascriptcoregtk-4.0.pc
-        fi
-
-        # 设置 PKG_CONFIG_PATH 环境变量
-        echo "export PKG_CONFIG_PATH=/usr/local/lib/pkgconfig:$PKG_CONFIG_PATH" >> ~/.bashrc
-
-        # 验证链接创建成功
-        ls -la /usr/lib/x86_64-linux-gnu/libwebkit2gtk-4.0.so*
-        ls -la /usr/lib/x86_64-linux-gnu/libjavascriptcoregtk-4.0.so*
-        ls -la /usr/lib/x86_64-linux-gnu/libJavaScriptCore.so* || echo "JavaScriptCore links not found"
-        ls -la /usr/local/lib/pkgconfig/ || echo "pkgconfig files not found"
+        # 解决javascriptcore-rs-sys问题
+        sudo ln -sf /usr/lib/x86_64-linux-gnu/pkgconfig/javascriptcoregtk-4.1.pc /usr/lib/x86_64-linux-gnu/pkgconfig/javascriptcoregtk-4.0.pc
+        sudo ln -sf /usr/lib/x86_64-linux-gnu/pkgconfig/webkit2gtk-4.1.pc /usr/lib/x86_64-linux-gnu/pkgconfig/webkit2gtk-4.0.pc
 
     - name: 安装 Rust
       uses: dtolnay/rust-toolchain@stable
